sementara ngene sek -- make better data structure

--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
 </head>
 <body>
     <h1>Server-Sent Events Example</h1>
-    <button onclick="sendSuit()">Choice</button>
     <div id="events"></div>
-    
+    <button onclick="sendSuit()">Choice</button>
     <script>
         const roomId = prompt("Enter Room ID:");
         let player;
@@ -34,7 +33,7 @@
 
         function sendSuit(){
             const suit = prompt("Enter suit: ");
-            fetch(`/rooms/play/${roomId}/${player}/${suit}`)
+            fetch(`/rooms/a/${roomId}/${player}/${suit}`)
             .then(r=>{
                 if(r.status===200){
                     source.close()
